--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,18 @@
 {
   "name": "backend",
+  "type": "module",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "server.js",
+  "description": "",
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
@@ -18,5 +22,9 @@
     "mongoose": "^9.1.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
+  },
+
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
